--- a/platformio.ini
+++ b/platformio.ini
@@ -15,3 +15,7 @@ framework = arduino
 monitor_speed = 115200
 lib_deps = 
     knolleary/PubSubClient@^2.8
+
+; Uncomment and set IP for OTA update
+;upload_protocol = espota
+;upload_port = 192.168.68.148
