--- a/platformio.ini
+++ b/platformio.ini
@@ -8,14 +8,20 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:lolin_d32]
-platform = espressif32
-board = lolin_d32
+; [env:az-delivery-devkit-v4]
+; platform = espressif32
+; board = az-delivery-devkit-v4
+[env:nodemcuv2]
+platform = espressif8266
+board = nodemcuv2
+; [env:esp_wroom_02]
+; platform = espressif8266
+; board = esp_wroom_02
 framework = arduino
 monitor_speed = 115200
 lib_deps = 
     knolleary/PubSubClient@^2.8
 
 ; Uncomment and set IP for OTA update
-;upload_protocol = espota
-;upload_port = 192.168.68.148
+; upload_protocol = espota
+; upload_port = 192.168.68.148
